--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <!-- portofolio -->
       <div class="Portofolio">
         <div class="bg2gr"></div>
-          <img class="foto1" src="images/char2.jpg" />
-          <img class="foto2" src="images/cyrus2.jpg" />
-          <img class="foto3" src="images/bazaar2.jpg" />
-          <img class="foto4" src="images/cyrus1.jpg" />
-          <img class="foto5" src="images/charlene.jpg" />
-          <img class="foto6" src="images/char1.jpg" />
-          <img class="foto7" src="images/bckfl.jpg" />
-          <img class="foto8" src="images/bazaar1.jpg"/>
+          <img class="foto1" src="char2.jpg" />
+          <img class="foto2" src="cyrus2.jpg" />
+          <img class="foto3" src="bazaar2.jpg" />
+          <img class="foto4" src="cyrus1.jpg" />
+          <img class="foto5" src="charlene.jpg" />
+          <img class="foto6" src="char1.jpg" />
+          <img class="foto7" src="bckfl.jpg" />
+          <img class="foto8" src="bazaar1.jpg"/>
         <div class="textpt"><section id="section_2">Portofolio</section></div>
       </div>
 
