--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="welc">Welcome I’M</div>
           </div>
         </div>
-        <img class="pf" src="images/nobg.png" />
+        <img class="pf" src="nobg.png" />
       </div-->
       <!-- portofolio -->
       <div class="Portofolio">
