--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
       <!-- footer -->
       <div class="footer" >
-        <div class="bg3gr"></div>
+        <div class="tod"></div>
         <div class="button">
           <div class="block" ></div>
           <div class="submit" >Submit</div>
